fixed the title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-----------------------------------------------------------------------
-dumbass about page made by me
+curated by yours truly
 ------------------------------------------------------------------------>
  
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "//www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
@@ -7,7 +7,7 @@ dumbass about page made by me
 
 <head>
  
-<title>{Title}</title>
+<title>HT</title>
  
 <link rel="shortcut icon" href="//i205.photobucket.com/albums/bb186/mhilkas/favoicons/30bz9ms.gif">
 
