--- a/index.html
+++ b/index.html
@@ -1491,7 +1491,7 @@ et:after {
             
             <div class="honeyflex">
             <span class="th th-shopping-bag-o"></span>
-            <div class="honeytext"><b>Gumroad:</b> <a href="//twitter.com/ukiibox">glenthemes</a></div>
+            <div class="honeytext"><b>Gumroad:</b> <a href="https://gumroad.com/glenthemes">glenthemes</a></div>
             </div><!--honeyflex-->
             
             <div class="honeyflex">
