updated credits box

--- a/index.html
+++ b/index.html
@@ -1060,6 +1060,8 @@ et:after {
     <div class="crd-box">
         <div class="crd-tiddy">credits</div>
         <div class="crd-cont">
+            glenthemes logo is by <a href="https://www.instagram.com/julieoolie_/>julieoolie_</a> (commissioned)
+            <p>
             page section jump scroll jQuery help from <a href="//magnusthemes.tumblr.com">magnusthemes</a>
             <p>
             "Honeybee" icon font by <a href="https://honeybee.suiomi.com">suiomi</a>
