--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@ et:after {
     <div class="crd-box">
         <div class="crd-tiddy">credits</div>
         <div class="crd-cont">
-            glenthemes logo is by <a href="https://www.instagram.com/julieoolie_/>julieoolie_</a> (commissioned)
+            glenthemes logo is by <a href="https://www.instagram.com/julieoolie_/">julieoolie_</a> (commissioned)
             <p>
             page section jump scroll jQuery help from <a href="//magnusthemes.tumblr.com">magnusthemes</a>
             <p>
