updated font icon tumblr-2 to tumblr-o

--- a/index.html
+++ b/index.html
@@ -1463,7 +1463,7 @@ et:after {
             </div><!--honeyflex-->
             
             <div class="honeyflex">
-            <span class="th th-tumblr-2"></span>
+            <span class="th th-tumblr-o"></span>
             <div class="honeytext"><b>Theme blog:</b> <a href="//glenthemes.tumblr.com">glenthemes</a></div>
             </div><!--honeyflex-->
             
