--- a/index.html
+++ b/index.html
@@ -1149,7 +1149,7 @@ et:after {
             
             <div class="stat-row">
                 <div class="stat-name">Japanese</div>
-                <div class="stat-deet">Post-Beginner</div><!--stat-bar-->
+                <div class="stat-deet">Lower Intermediate</div><!--stat-bar-->
             </div><!--stat-row-->
             </div><!--skill-item-->
             
