--- a/index.html
+++ b/index.html
@@ -1401,7 +1401,7 @@ et:after {
                 <img class="glen-pc" src="https://66.media.tumblr.com/27112be000da25e3a550752c8b03ff1b/tumblr_pkyjjduUK91qg2f5co1_1280.png">
                 <div class="glen-holder">
                 <img class="glen-pv" src="https://78.media.tumblr.com/2917af09859b11f31b99005a620fcdc6/tumblr_p3tpxoLAKC1ubolzro3_540.gif">
-                <a class="glen-bar" target="_blank" title="theme preview" href="//glenthpvs.tumblr.com/lionheart">Lionheart</a>
+                <a class="glen-bar" target="_blank" title="page preview" href="//glenthpvs.tumblr.com/lionheart">Lionheart</a>
                 </div><!--glen-holder-->
             </div><!--glen-big-->
         </div><!--glen-row-->
