--- a/index.html
+++ b/index.html
@@ -1382,8 +1382,8 @@ et:after {
             <div class="glen-big">
                 <img class="glen-pc" src="https://66.media.tumblr.com/27112be000da25e3a550752c8b03ff1b/tumblr_pkyjjduUK91qg2f5co1_1280.png">
                 <div class="glen-holder">
-                <img class="glen-pv" src="https://78.media.tumblr.com/32707cd818ae6639471e5fb22f08485c/tumblr_oopz5koqgz1ubolzro4_r1_540.gif">
-                <a class="glen-bar" target="_blank" title="theme preview" href="//glenthpvs.tumblr.com/420">incandescence</a>
+                <img class="glen-pv" src="https://66.media.tumblr.com/e8710c1bf3c23eacdac0b882bb543585/tumblr_ppwbf1k1li1ubolzro1_1280.png">
+                <a class="glen-bar" target="_blank" title="theme preview" href="//glenthpvs.tumblr.com/breeze">breeze</a>
                 </div><!--glen-holder-->
             </div><!--glen-big-->
         </div><!--glen-row-->
