21; consolas for mac os

--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@ $(document).ready(function(){
  
 <style type="text/css">
 
-@font-face { font-family: "big noodle"; src: url('https://dl.dropboxusercontent.com/s/kxfy020vrpkbbz7/big_noodle_titling_oblique.ttf'); }
+@font-face { font-family: "big noodle"; src: url('https://dl.dropboxusercontent.com/s/kxfy0
+ vrpkbbz7/big_noodle_titling_oblique.ttf'); }
+ 
+ @font-face { font-family: "consolas"; src: url('https://dl.dropbox.com/s/xap6ylki7bf2vgw/consolas.TTF'); }
+
  
 /*--------------------TOOLTIPS--------------------*/
 #s-m-t-tooltip {
@@ -1115,7 +1119,7 @@ et:after {
             <div class="llline"></div>
             </div><!--abt-flex-->
             
-            <div class="abt-txt"><b>Hello, I'm Hiu Tung,</b> 20, from Hong Kong. Better known as <highlight>HT</highlight> among friends and on the net, I draw, write, design, and code. Lover of cats, astronomy, rock music and more. Currently studying my 2nd year of <i>English Language and Linguistics</i> at University of Kent.
+            <div class="abt-txt"><b>Hello, I'm Hiu Tung,</b> 21, from Hong Kong. Better known as <highlight>HT</highlight> among friends and online, I draw, write, design, and code. Lover of cats, astronomy, rock music and more. Currently studying my 2nd year of <i>English Language and Linguistics</i> at University of Kent.
             <div class="code">To create art is to <blue>feel</blue>, and I exist within the art that I breathe.</div><!--code-->
             </div>
         </div><!--abt-right-->
