--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@ $(document).ready(function(){
 <style type="text/css">
 @font-face { font-family: "big noodle"; src: url('https://dl.dropboxusercontent.com/s/kxfy020vrpkbbz7/big_noodle_titling_oblique.ttf'); }
  
+ @font-face { font-family: "consoquoince"; src: url('https://dl.dropbox.com/s/xap6ylki7bf2vgw/consolas.TTF'); }
+ 
 /*--------------------TOOLTIPS--------------------*/
 #s-m-t-tooltip {
     padding:5px 10px;
