--- a/index.html
+++ b/index.html
@@ -1335,7 +1335,7 @@ et:after {
             
             <div class="honeyflex">
             <span class="th th-instagram-o"></span>
-            <div class="honeytext"><b>Instagram:</b> <a href="//instagram.com/fenneltail/">Fenneltail</a></div>
+            <div class="honeytext"><b>Instagram:</b> <a href="//instagram.com/_glenjaminx/">_glenjaminx</a></div>
             </div><!--honeyflex-->
         </div><!--soche-->
         
