--- a/index.html
+++ b/index.html
@@ -1330,7 +1330,7 @@ et:after {
             
             <div class="honeyflex">
             <span class="th th-twitter-o"></span>
-            <div class="honeytext"><b>Twitter:</b> <a href="//twitter.com/Fenneltail">Fenneltail</a></div>
+            <div class="honeytext"><b>Twitter:</b> <a href="//twitter.com/glenjaminx">glenjaminx</a></div>
             </div><!--honeyflex-->
             
             <div class="honeyflex">
