--- a/index.html
+++ b/index.html
@@ -1656,8 +1656,8 @@ p:last-child {margin-bottom:auto!important;}
         <div class="social-media-col">
             <div class="social-media">
                 <a href="https://glenthemes.tumblr.com"><i class="fab fa-tumblr"></i></a>
-                <a href="https://instagram.com/glenjaminx"><i class="fab fa-instagram"></i></a>
-                <a href="https://twitter.com/Fenneltail"><i class="fab fa-twitter"></i></a>
+                <a href="https://instagram.com/_glenjaminx"><i class="fab fa-instagram"></i></a>
+                <a href="https://twitter.com/glenjaminx"><i class="fab fa-twitter"></i></a>
                 <a href="https://gumroad.com/glenthemes"><i class="fas fa-shopping-cart"></i></a>
                 <a href="https://ko-fi.com/glenthemes"><i class="fas fa-donate"></i></a>
             </div><!--social-media-->
