--- a/index.html
+++ b/index.html
@@ -1933,7 +1933,7 @@ p:last-child {margin-bottom:auto!important;}
             <div class="about-vh tes">
             <div class="about-title">style & branding <span>&mdash;</span></div>
             <div class="about-text">
-            I enjoy crafting layouts that are intuitive and straightforward, but futuristic and elaborate at the same time. My designs aim to be rich with an elevated aesthetic without complicating the user's experience.
+            I enjoy crafting layouts that are intuitive and straightforward, but innovative and elaborate at the same time. My designs aim to be rich with an elevated aesthetic without complicating the user's experience.
             <p>
             If I was stranded on an island and I could only choose one line of code to survive on, it would be <b>display:flex;</b>. In design, <b>spacing</b> and <b>colour choice</b> are aspects that I highly value.
             <p><p>
