updated abt screen img

--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@ p:last-child {margin-bottom:auto!important;}
     /* width:38%; */
     flex:1;
     height:100%;
-    background-image:url(https://cdn.discordapp.com/attachments/382037367940448256/657960189282091028/waifu2x_2.png);
+    background-image:url(https://instagram.fhkg3-2.fna.fbcdn.net/v/t51.2885-15/e35/75210472_171789617229567_3890377671775438792_n.jpg?_nc_ht=instagram.fhkg3-2.fna.fbcdn.net&_nc_cat=103&_nc_ohc=DymsUxx8V0IAX_TNH9U&oh=f323e8ca8d3ac3b976415a22024a7017&oe=5E9EAB44);
     background-position:fixed;
     background-position:center;
     background-size:cover;
