--- a/index.html
+++ b/index.html
@@ -1682,12 +1682,12 @@ p:last-child {margin-bottom:auto!important;}
         
             <div class="art-gallery">
             <div class="sentry">
-                <img class="art-item" src="https://78.media.tumblr.com/4965bc7dbb500dcbfb222ffd6e17e5eb/tumblr_pbyh03aI1v1qg2f5co1_1280.png">
-                <img class="art-item" src="https://78.media.tumblr.com/b62779a569ffbef3e2b1b62ce6fe19b4/tumblr_pbyh03aI1v1qg2f5co2_1280.png">
-                <img class="art-item" src="https://static.tumblr.com/2pnwama/ldTpl07q2/dodc.png">
-                <img class="art-item" src="https://78.media.tumblr.com/6bab1a93cb772b48b2aebec1188d8176/tumblr_pbyi9iIChY1qg2f5co1_1280.png">
-                <img class="art-item" src="https://78.media.tumblr.com/3bfa42f7f4c593b12ecdad9b324a64c0/tumblr_pbyh973Yrx1qg2f5co1_1280.png">
-                <img class="art-item" src="https://static.tumblr.com/2pnwama/eynpl085i/oxqb4lupei1v6jxx9o2wccc.png">
+                <img class="art-item" src="https://cdn.discordapp.com/attachments/382037367940448256/708726628787945514/tumblr_pbyh03aI1v1qg2f5co1_1280.png">
+                <img class="art-item" src="https://cdn.discordapp.com/attachments/382037367940448256/708726713479200808/tumblr_pbyh03aI1v1qg2f5co2_1280.png">
+                <img class="art-item" src="https://cdn.discordapp.com/attachments/382037367940448256/708726785642201148/dodc.png">
+                <img class="art-item" src="https://cdn.discordapp.com/attachments/382037367940448256/708726875597570119/tumblr_pbyi9iIChY1qg2f5co1_1280.png">
+                <img class="art-item" src="https://cdn.discordapp.com/attachments/382037367940448256/708726946061746266/tumblr_pbyh973Yrx1qg2f5co1_1280.png">
+                <img class="art-item" src="https://cdn.discordapp.com/attachments/382037367940448256/708727028639334430/oxqb4lupei1v6jxx9o2wccc.png">
             </div><!--sentry-->
             
             <div class="art-panel">
