--- a/index.html
+++ b/index.html
@@ -1098,8 +1098,8 @@ p:last-child {margin-bottom:auto!important;}
     flex:1;
     height:100%;
     background-image:url(https://cdn.discordapp.com/attachments/382037367940448256/708730263714398208/80448464_992640227786726_7438598257294172217_n.png);
-    background-position:fixed;
-    background-position:center;
+    background-attachment:fixed;
+    background-position:74% 50%;
     background-size:cover;
     background-repeat:no-repeat;
 }
