--- a/index.html
+++ b/index.html
@@ -1789,7 +1789,7 @@ p:last-child {margin-bottom:auto!important;}
         <div class="about-vh web">
             <div class="about-title">Web Design <span>&mdash;</span> Development</div>
             <div class="about-text">
-            I kickstarted my coding journey by making themes, pages, and widgets under <a href="https://glenthemes.tumblr.com">glenthemes</a> on Tumblr since 2015. I began my journey into coding by making minor appearance changes, but eventually branched out to make full layouts and coding from scratch. I hope to pursue a formal education in this field in the near future.
+            I kickstarted my coding journey by making themes, pages, and widgets under <a href="https://glenthemes.tumblr.com">glenthemes</a> on Tumblr since 2015. I began my journey into coding by making minor styling changes, but eventually branched out to create full-fledge layouts and coding them from scratch. As of 2023, I've made a handful of plugins (such as <a href="//github.com/griddery/griddery.github.io">griddery</a> and <a href="//gitlab.com/popify/i">popify</a>), simplifying the process for various web developers.
             </div><!--about-text-->
             
             <div class="hobbies">
