--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 <body>
 
 <!-------- LOADING SCREEN -------->
-<!-- <div class="loading_container">
+<div class="loading_container">
     <h3 class="loading_text">HT Tai</h3>
-</div> -->
+</div>
 
 <!-------- HEADER: ABOUT -------->
 <header id="about">
