--- a/index.html
+++ b/index.html
@@ -568,6 +568,10 @@
 
 <div class="mode-switch-overlay"></div>
 
+<div style="position:absolute;visibility:hidden;">
+    <i class="mgc_box_3_line" aria-hidden="true"></i>
+</div>
+
 <script src="https://wowjs.uk/dist/wow.min.js"></script>
 <script>new WOW().init();</script>
 
