--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
 
 <div class="mode-switch-overlay"></div>
 
-<div style="position:absolute;visibility:hidden;">
+<div style="position:absolute;visibility:collapse;width:0;height:0;bottom:0;left:0;z-index:-99">
     <i class="mgc_box_3_line" aria-hidden="true"></i>
 </div>
 
