--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         2023 ⓒ All Rights Reserved
 
         INITIAL REL.: 2023-11-10
-        LAST UPDT.: 2023-11-10
+        LAST UPDT.: 2023-12-02
 
 
 ------------------------------------------------------------------->
@@ -28,7 +28,7 @@
 <meta name="description" content="HT is a freelance Front-End Developer with a robust background in visual arts based in Vancouver, BC. Their mission is to create visually compelling and user-friendly websites and tools for anyone to easily install and customize, regardless of their coding experience."/>
 
 <!-- favicon -->
-<link rel="shortcut icon" href="https://66.media.tumblr.com/d9dfed7f65bed647b673f44402ff45bb/tumblr_pl24pagVRz1qg2f5co1_1280.png">
+<link rel="shortcut icon" href="https://file.garden/ZRt8jW_MomIqlrfn/imgs/gt_logo_gray.png">
 
 <!-- non-SVG circular graphs by me -->
 <script src="https://circle-graph.gitlab.io/s/init.js"></script>
