--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <link href="https://static.tumblr.com/gtjt4bo/Ym3s2uqs7/iconsax.css" rel="stylesheet">
 <link href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" rel="stylesheet">
 <link href="https://static.tumblr.com/gtjt4bo/gpcs3vz6q/ht-icons.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/gh/Richard9394/MingCute@main/fonts/MingCute.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/gh/Richard9394/MingCute@2.92/fonts/MingCute.css" rel="stylesheet">
 
 <!-- smooth scrolling -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
