--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-----------------------------------------------------------------
 
-        __  __     ______      ______   ______     __    
+         __  __     ______      ______   ______     __    
         /\ \_\ \   /\__  _\    /\__  _\ /\  __ \   /\ \   
         \ \  __ \  \/_/\ \/    \/_/\ \/ \ \  __ \  \ \ \  
         \ \_\ \_\    \ \_\       \ \_\  \ \_\ \_\  \ \_\ 
@@ -396,7 +396,7 @@
 
         <div class="email-line wow fadeInUp" data-wow-delay="0.8s">
             <i iconsax icon="mail"></i>
-            <a href="mailto:hello.ht.dev@gmail.com">hello.ht.dev@gmail.com</a>
+            <a href="mailto:glenthemes.exe@gmail.com">glenthemes.exe@gmail.com</a>
         </div>
     </section>
 </main>
