--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
          __  __     ______      ______   ______     __    
         /\ \_\ \   /\__  _\    /\__  _\ /\  __ \   /\ \   
         \ \  __ \  \/_/\ \/    \/_/\ \/ \ \  __ \  \ \ \  
-        \ \_\ \_\    \ \_\       \ \_\  \ \_\ \_\  \ \_\ 
-        \/_/\/_/     \/_/        \/_/   \/_/\/_/   \/_/ 
+         \ \_\ \_\    \ \_\       \ \_\  \ \_\ \_\  \ \_\ 
+          \/_/\/_/     \/_/        \/_/   \/_/\/_/   \/_/ 
                                                         
         Designed and developed by HT / @glenthemes
         glenthemes.github.io
         2023 ⓒ All Rights Reserved
 
         INITIAL REL.: 2023-11-10
-        LAST UPDT.: 2024-05-31
+        LAST UPDT.: 2025-11-13
 
 
 ------------------------------------------------------------------->
@@ -275,7 +275,7 @@
                             </div>
 
                             <div class="project-eye-wrap-outer">
-                                <a href="https://svg-css-clip-path.gitlab.io/view" target="_blank" class="project-eye-wrap-inner">
+                                <a href="https://svg-css-mask.gitlab.io/view" target="_blank" class="project-eye-wrap-inner">
                                     <div class="project-eye" color="var(--Project-Eye-Color)"></div>
                                     <div class="eye">
                                         <div class="pupil"></div>
